# OpenSteamTool-GUI

./: .gitignore  README.md  build.bat  patch.js
manager/: index.html  package-lock.json  package.json
manager/electron/: main.cjs  preload.cjs
manager/src/: App.tsx  global.d.ts  index.css
src/: CMakeLists.txt  dllmain.cpp  dllmain.h
src/Hook/: Hooks_IPC_ISteamUser.cpp  Hooks_Manifest.cpp  Hooks_Manifest.h  Hooks_NetPacket.cpp  Hooks_Package.cpp  Hooks_Package.h  Patterns.h
src/Utils/: Config.cpp  Config.h  FileWatcher.h  Log.h  LuaConfig.cpp  LuaConfig.h
